# NanoTrack_Libtorch

./: CMakeLists.txt  README.md  demo_libtorch.cpp  nanotrack.cpp  nanotrack.hpp
models/: head.pt  nanotrack_backbone_T127.pt  nanotrack_backbone_X255.pt
